--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -1640,11 +1640,11 @@
                         <div class="card-body">
 
                         <h4>Criticidad según Artículos</h4>
-                        <apx-chart [series]="stacked100BarChart.series" [chart]="stacked100BarChart.chart"
-                        [dataLabels]="stacked100BarChart.dataLabels" [plotOptions]="stacked100BarChart.plotOptions"
-                        [xaxis]="stacked100BarChart.xaxis" [stroke]="stacked100BarChart.stroke"
-                        [fill]="stacked100BarChart.fill" [title]="stacked100BarChart.title"
-                        [tooltip]="stacked100BarChart.tooltip" [legend]="stacked100BarChart.legend" [colors]="stacked100BarChart.colors" dir="ltr"></apx-chart>
+                        <apx-chart [series]="stacked100BarChartArticulos.series" [chart]="stacked100BarChartArticulos.chart"
+                        [dataLabels]="stacked100BarChartArticulos.dataLabels" [plotOptions]="stacked100BarChartArticulos.plotOptions"
+                        [xaxis]="stacked100BarChartArticulos.xaxis" [stroke]="stacked100BarChartArticulos.stroke"
+                        [fill]="stacked100BarChartArticulos.fill" [title]="stacked100BarChartArticulos.title"
+                        [tooltip]="stacked100BarChartArticulos.tooltip" [legend]="stacked100BarChartArticulos.legend" [colors]="stacked100BarChartArticulos.colors" dir="ltr"></apx-chart>
 
                         </div>
                     </div>
@@ -1672,11 +1672,11 @@
                         <div class="card-body">
 
                         <h4>Criticidad según Instancias de cumplimiento</h4>
-                        <apx-chart [series]="stacked100BarChart.series" [chart]="stacked100BarChart.chart"
-                        [dataLabels]="stacked100BarChart.dataLabels" [plotOptions]="stacked100BarChart.plotOptions"
-                        [xaxis]="stacked100BarChart.xaxis" [stroke]="stacked100BarChart.stroke"
-                        [fill]="stacked100BarChart.fill" [title]="stacked100BarChart.title"
-                        [tooltip]="stacked100BarChart.tooltip" [legend]="stacked100BarChart.legend" [colors]="stacked100BarChart.colors" dir="ltr"></apx-chart>
+                        <apx-chart [series]="stacked100BarChartInstancias.series" [chart]="stacked100BarChartInstancias.chart"
+                        [dataLabels]="stacked100BarChartInstancias.dataLabels" [plotOptions]="stacked100BarChartInstancias.plotOptions"
+                        [xaxis]="stacked100BarChartInstancias.xaxis" [stroke]="stacked100BarChartInstancias.stroke"
+                        [fill]="stacked100BarChartInstancias.fill" [title]="stacked100BarChartInstancias.title"
+                        [tooltip]="stacked100BarChartInstancias.tooltip" [legend]="stacked100BarChartInstancias.legend" [colors]="stacked100BarChartInstancias.colors" dir="ltr"></apx-chart>
 
                         </div>
                     </div>
@@ -1704,11 +1704,11 @@
                         <div class="card-body">
 
                         <h4>Criticidad Permisos</h4>
-                        <apx-chart [series]="stacked100BarChart2.series" [chart]="stacked100BarChart2.chart"
-                        [dataLabels]="stacked100BarChart2.dataLabels" [plotOptions]="stacked100BarChart2.plotOptions"
-                        [xaxis]="stacked100BarChart2.xaxis" [stroke]="stacked100BarChart2.stroke"
-                        [fill]="stacked100BarChart2.fill" [title]="stacked100BarChart2.title"
-                        [tooltip]="stacked100BarChart2.tooltip" [legend]="stacked100BarChart2.legend" [colors]="stacked100BarChart2.colors" dir="ltr"></apx-chart>
+                        <apx-chart [series]="stacked100BarChartPermisos.series" [chart]="stacked100BarChartPermisos.chart"
+                        [dataLabels]="stacked100BarChartPermisos.dataLabels" [plotOptions]="stacked100BarChartPermisos.plotOptions"
+                        [xaxis]="stacked100BarChartPermisos.xaxis" [stroke]="stacked100BarChartPermisos.stroke"
+                        [fill]="stacked100BarChartPermisos.fill" [title]="stacked100BarChartPermisos.title"
+                        [tooltip]="stacked100BarChartPermisos.tooltip" [legend]="stacked100BarChartPermisos.legend" [colors]="stacked100BarChartPermisos.colors" dir="ltr"></apx-chart>
 
                         </div>
                     </div>
@@ -1733,11 +1733,11 @@
                         <div class="card-body">
 
                         <h4>Criticidad Monitoreos</h4>
-                        <apx-chart [series]="stacked100BarChart2.series" [chart]="stacked100BarChart2.chart"
-                        [dataLabels]="stacked100BarChart2.dataLabels" [plotOptions]="stacked100BarChart2.plotOptions"
-                        [xaxis]="stacked100BarChart2.xaxis" [stroke]="stacked100BarChart2.stroke"
-                        [fill]="stacked100BarChart2.fill" [title]="stacked100BarChart2.title"
-                        [tooltip]="stacked100BarChart2.tooltip" [legend]="stacked100BarChart2.legend" [colors]="stacked100BarChart2.colors" dir="ltr"></apx-chart>
+                        <apx-chart [series]="stacked100BarChartMonitoreos.series" [chart]="stacked100BarChartMonitoreos.chart"
+                        [dataLabels]="stacked100BarChartMonitoreos.dataLabels" [plotOptions]="stacked100BarChartMonitoreos.plotOptions"
+                        [xaxis]="stacked100BarChartMonitoreos.xaxis" [stroke]="stacked100BarChartMonitoreos.stroke"
+                        [fill]="stacked100BarChartMonitoreos.fill" [title]="stacked100BarChartMonitoreos.title"
+                        [tooltip]="stacked100BarChartMonitoreos.tooltip" [legend]="stacked100BarChartMonitoreos.legend" [colors]="stacked100BarChartMonitoreos.colors" dir="ltr"></apx-chart>
 
                         </div>
                     </div>
@@ -1766,11 +1766,11 @@
                         <div class="card-body">
 
                         <h4>Criticidad Reportes</h4>
-                        <apx-chart [series]="stacked100BarChart2.series" [chart]="stacked100BarChart2.chart"
-                        [dataLabels]="stacked100BarChart2.dataLabels" [plotOptions]="stacked100BarChart2.plotOptions"
-                        [xaxis]="stacked100BarChart2.xaxis" [stroke]="stacked100BarChart2.stroke"
-                        [fill]="stacked100BarChart2.fill" [title]="stacked100BarChart2.title"
-                        [tooltip]="stacked100BarChart2.tooltip" [legend]="stacked100BarChart2.legend" [colors]="stacked100BarChart2.colors" dir="ltr"></apx-chart>
+                        <apx-chart [series]="stacked100BarChartReportes.series" [chart]="stacked100BarChartReportes.chart"
+                        [dataLabels]="stacked100BarChartReportes.dataLabels" [plotOptions]="stacked100BarChartReportes.plotOptions"
+                        [xaxis]="stacked100BarChartReportes.xaxis" [stroke]="stacked100BarChartReportes.stroke"
+                        [fill]="stacked100BarChartReportes.fill" [title]="stacked100BarChartReportes.title"
+                        [tooltip]="stacked100BarChartReportes.tooltip" [legend]="stacked100BarChartReportes.legend" [colors]="stacked100BarChartReportes.colors" dir="ltr"></apx-chart>
 
                         </div>
                     </div>
@@ -1795,11 +1795,11 @@
                         <div class="card-body">
 
                         <h4>Criticidad Otras Obl.</h4>
-                        <apx-chart [series]="stacked100BarChart2.series" [chart]="stacked100BarChart2.chart"
-                        [dataLabels]="stacked100BarChart2.dataLabels" [plotOptions]="stacked100BarChart2.plotOptions"
-                        [xaxis]="stacked100BarChart2.xaxis" [stroke]="stacked100BarChart2.stroke"
-                        [fill]="stacked100BarChart2.fill" [title]="stacked100BarChart2.title"
-                        [tooltip]="stacked100BarChart2.tooltip" [legend]="stacked100BarChart2.legend" [colors]="stacked100BarChart2.colors" dir="ltr"></apx-chart>
+                        <apx-chart [series]="stacked100BarChartOtros.series" [chart]="stacked100BarChartOtros.chart"
+                        [dataLabels]="stacked100BarChartOtros.dataLabels" [plotOptions]="stacked100BarChartOtros.plotOptions"
+                        [xaxis]="stacked100BarChartOtros.xaxis" [stroke]="stacked100BarChartOtros.stroke"
+                        [fill]="stacked100BarChartOtros.fill" [title]="stacked100BarChartOtros.title"
+                        [tooltip]="stacked100BarChartOtros.tooltip" [legend]="stacked100BarChartOtros.legend" [colors]="stacked100BarChartOtros.colors" dir="ltr"></apx-chart>
 
                         </div>
                     </div>
@@ -1861,11 +1861,11 @@
                     <div class="card-body">
 
                     <h4>Criticidad según Artículos por ámbito normativo</h4>
-                    <apx-chart [series]="stacked100BarChart3.series" [chart]="stacked100BarChart3.chart"
-                    [dataLabels]="stacked100BarChart3.dataLabels" [plotOptions]="stacked100BarChart3.plotOptions"
-                    [xaxis]="stacked100BarChart3.xaxis" [stroke]="stacked100BarChart3.stroke"
-                    [fill]="stacked100BarChart3.fill" [title]="stacked100BarChart3.title"
-                    [tooltip]="stacked100BarChart3.tooltip" [legend]="stacked100BarChart3.legend" [colors]="stacked100BarChart3.colors" dir="ltr"></apx-chart>
+                    <apx-chart [series]="stacked100BarChartAmbienteCriticidad.series" [chart]="stacked100BarChartAmbienteCriticidad.chart"
+                    [dataLabels]="stacked100BarChartAmbienteCriticidad.dataLabels" [plotOptions]="stacked100BarChartAmbienteCriticidad.plotOptions"
+                    [xaxis]="stacked100BarChartAmbienteCriticidad.xaxis" [stroke]="stacked100BarChartAmbienteCriticidad.stroke"
+                    [fill]="stacked100BarChartAmbienteCriticidad.fill" [title]="stacked100BarChartAmbienteCriticidad.title"
+                    [tooltip]="stacked100BarChartAmbienteCriticidad.tooltip" [legend]="stacked100BarChartAmbienteCriticidad.legend" [colors]="stacked100BarChartAmbienteCriticidad.colors" dir="ltr"></apx-chart>
 
                     </div>
                 </div>
@@ -1892,11 +1892,11 @@
                     <div class="card-body">
 
                     <h4>Criticidad según Instancias por ámbito normativo</h4>
-                    <apx-chart [series]="stacked100BarChart3.series" [chart]="stacked100BarChart3.chart"
-                    [dataLabels]="stacked100BarChart3.dataLabels" [plotOptions]="stacked100BarChart3.plotOptions"
-                    [xaxis]="stacked100BarChart3.xaxis" [stroke]="stacked100BarChart3.stroke"
-                    [fill]="stacked100BarChart3.fill" [title]="stacked100BarChart3.title"
-                    [tooltip]="stacked100BarChart3.tooltip" [legend]="stacked100BarChart3.legend" [colors]="stacked100BarChart3.colors" dir="ltr"></apx-chart>
+                    <apx-chart [series]="stacked100BarChartAmbienteCriticidadInstancias.series" [chart]="stacked100BarChartAmbienteCriticidadInstancias.chart"
+                    [dataLabels]="stacked100BarChartAmbienteCriticidadInstancias.dataLabels" [plotOptions]="stacked100BarChartAmbienteCriticidadInstancias.plotOptions"
+                    [xaxis]="stacked100BarChartAmbienteCriticidadInstancias.xaxis" [stroke]="stacked100BarChartAmbienteCriticidadInstancias.stroke"
+                    [fill]="stacked100BarChartAmbienteCriticidadInstancias.fill" [title]="stacked100BarChartAmbienteCriticidadInstancias.title"
+                    [tooltip]="stacked100BarChartAmbienteCriticidadInstancias.tooltip" [legend]="stacked100BarChartAmbienteCriticidadInstancias.legend" [colors]="stacked100BarChartAmbienteCriticidadInstancias.colors" dir="ltr"></apx-chart>
 
                     </div>
                 </div>
