data grafica cuerpo legal

--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -1828,11 +1828,11 @@
                         <div class="card-body">
 
                         <h4>Criticidad según Cuerpos Legales por ámbito normativo</h4>
-                        <apx-chart [series]="stacked100BarChart3.series" [chart]="stacked100BarChart3.chart"
-                        [dataLabels]="stacked100BarChart3.dataLabels" [plotOptions]="stacked100BarChart3.plotOptions"
-                        [xaxis]="stacked100BarChart3.xaxis" [stroke]="stacked100BarChart3.stroke"
-                        [fill]="stacked100BarChart3.fill" [title]="stacked100BarChart3.title"
-                        [tooltip]="stacked100BarChart3.tooltip" [legend]="stacked100BarChart3.legend" [colors]="stacked100BarChart3.colors" dir="ltr"></apx-chart>
+                        <apx-chart [series]="stacked100BarChartAmbienteCriticidadCuerpos.series" [chart]="stacked100BarChartAmbienteCriticidadCuerpos.chart"
+                        [dataLabels]="stacked100BarChartAmbienteCriticidadCuerpos.dataLabels" [plotOptions]="stacked100BarChartAmbienteCriticidadCuerpos.plotOptions"
+                        [xaxis]="stacked100BarChartAmbienteCriticidadCuerpos.xaxis" [stroke]="stacked100BarChartAmbienteCriticidadCuerpos.stroke"
+                        [fill]="stacked100BarChartAmbienteCriticidadCuerpos.fill" [title]="stacked100BarChartAmbienteCriticidadCuerpos.title"
+                        [tooltip]="stacked100BarChartAmbienteCriticidadCuerpos.tooltip" [legend]="stacked100BarChartAmbienteCriticidadCuerpos.legend" [colors]="stacked100BarChartAmbienteCriticidadCuerpos.colors" dir="ltr"></apx-chart>
 
                         </div>
                     </div>
